# tingle

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml  rust.yml
cmd/tingle/: main.go
docs/: bench-results.md  deep-mode.md  design-doc.md  implementation.md  spike-results.md  v2-rust-rewrite.md
evals/: README.md  compare.sh  run.sh  run_tasc.sh  tasc_dict.py
evals/questions/: advent-of-code.yaml  charliesbot.dev.yaml  one.yaml
internal/enumerate/: enumerate.go
internal/manifest/: manifest.go
internal/model/: model.go
internal/parse/: parse.go  parse_test.go
internal/parse/queries/: cpp-tags.scm  kotlin-tags.scm
internal/rank/: rank.go
internal/render/: render.go
internal/resolve/: resolve.go
rust/: Cargo.toml
rust/src/: enumerate.rs  lib.rs  main.rs  manifest.rs  model.rs  rank.rs  render.rs  resolve.rs
rust/src/lang/: jvm.rs  mod.rs  vue.rs
rust/src/parse/: extract.rs  mod.rs
rust/src/parse/queries/: go-tags.scm  javascript-tags.scm  kotlin-tags.scm  python-tags.scm  typescript-tags.scm
rust/tests/: enumerate.rs  parse_langs.rs
scripts/: bench.sh  release.sh
spikes/a_perf/: main.go
spikes/b_regex/: main.go
spikes/b_utility/: main.go
spikes/d_puregoTS/: kotlin-tags.scm  main.go
testdata/fixtures/langs/: Badge.vue  Page.vue  Repo.kt  main.go  reader.h  slides.md  util.py  utils.ts
